--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <div class="example">
       <ul class="playlist">
         <li
-          data-cover="http://digital.akauk.com/utils/musicPlayer/data/john-doe.jpg"
+          data-cover="/images/cover.jpg"
           data-artist="John Doe"
           class="playlist-item"
         >
           <a href="/data/epic.mp3">Perfect</a>
         </li>
         <li
-          data-cover="http://digital.akauk.com/utils/musicPlayer/data/John-Wesley.jpg"
+          data-cover="/images/cover.jpg"
           data-artist="John Wesley"
           class="playlist-item"
         >
@@ -54,7 +54,7 @@
         </li>
 
         <li
-          data-cover="http://digital.akauk.com/utils/musicPlayer/data/jimi_hendrix.jpg"
+          data-cover="/images/cover.jpg
           data-artist="Jimi Hendrix"
           class="playlist-item"
         >
@@ -74,7 +74,7 @@
           "controls",
           "progress",
           "time",
-          "volume",
+          // "volume",
         ], // ==> This will display in  the order it is inserted
         //elements: [ 'controls' , 'information', 'artwork', 'progress', 'time', 'volume' ],
         controlElements: ["backward", "play", "forward", "stop"],
