--- a/index.html
+++ b/index.html
@@ -40,25 +40,33 @@
       <ul class="playlist">
         <li
           data-cover="/images/cover.jpg"
-          data-artist="John Doe"
+          data-artist="تست 1"
           class="playlist-item"
         >
-          <a href="/data/epic.mp3">Perfect</a>
+          <h4 data-href="/data/epic.mp3">   <p> تایتل</p> </h4>
+          .  <p class="caption">تست 1</p>
+          <img class="play" src="/images/play.png" alt="">
         </li>
         <li
           data-cover="/images/cover.jpg"
-          data-artist="John Wesley"
+          data-artist="تست ۲"
           class="playlist-item"
         >
-          <a href="/data/epic.mp3">Tequila 10 Seconds</a>
+          <h4 data-href="/data/epic.mp3">  <p > تایتل ۲</p> </h4>
+          .  <p class="caption">تست ۲</p>
+          <img class="play" src="/images/play.png" alt="">
+
         </li>
 
         <li
           data-cover="/images/cover.jpg
-          data-artist="Jimi Hendrix"
+          data-artist="تست ۳"
           class="playlist-item"
         >
-          <a href="/data/epic.mp3">Purple Haze</a>
+          <h4 data-href="/data/epic.mp3">  <p > تایتل ۳</p> </h4>
+          .  <p class="caption">تست ۳</p>
+          <img class="play" src="/images/play.png" alt="">
+
         </li>
       </ul>
     </div>
