--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل</p></h4>
           .
           <p class="caption">تست 1</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -62,7 +62,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل ۲</p></h4>
           .
           <p class="caption">تست ۲</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -72,7 +72,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل ۳</p></h4>
           .
           <p class="caption">تست ۳</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -82,7 +82,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل 4</p></h4>
           .
           <p class="caption">تست 4</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -92,7 +92,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل 5</p></h4>
           .
           <p class="caption">تست 5</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -102,7 +102,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل 6</p></h4>
           .
           <p class="caption">تست 6</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -112,7 +112,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل 7</p></h4>
           .
           <p class="caption">تست 7</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
         <li
           data-cover="/images/cover.jpg"
@@ -122,7 +122,7 @@
           <h4 data-href="/data/epic.mp3"><p>تایتل 8</p></h4>
           .
           <p class="caption">تست 8</p>
-          <img class="play" src="/images/play.png" alt="" />
+          <img class="play" src="/images/listPlay.png" alt="" />
         </li>
       </ul>
       <button data-show="false" class="more-btn" onclick="moreShow()">
